# BioImageLib

./: README.md
BioImageLib/: .gitignore  CMakeLists.txt
BioImageLib/Doc/: Doxyfile
BioImageLib/cmake/: Doxyfile.in  blBuild.cmake  blConfig.cmake.in  blDependencies.cmake  blSetTestEnvironment.cmake.in  blUse.cmake.in
BioImageLib/doc/: Doxyfile
BioImageLib/doc/html/: annotated.html  bl_bilateral_filter_8cpp.html  bl_bilateral_filter_8h.html  bl_bilateral_filter_8h_source.html  bl_binomial_blur_filter_8cpp.html  bl_binomial_blur_filter_8h.html  bl_binomial_blur_filter_8h_source.html  bl_cast_8h.html  bl_cast_8h_source.html  bl_cast_image_8cpp.html  bl_cast_image_8h.html  bl_cast_image_8h_source.html  bl_cast_image_to_float_8cpp.html  bl_cast_image_to_float_8h.html  bl_cast_image_to_float_8h_source.html  bl_cast_image_to_int_8cpp.html  bl_cast_image_to_int_8h.html  bl_cast_image_to_int_8h_source.html  bl_color_8cpp.html  bl_color_8h.html  bl_color_8h_source.html  bl_color_image_to_gray_8cpp.html  bl_color_image_to_gray_8h.html  bl_color_image_to_gray_8h_source.html  bl_color_image_to_luminance_8cpp.html  bl_color_image_to_luminance_8h.html  bl_color_image_to_luminance_8h_source.html  bl_comparison_image_filter_8cpp.html  bl_comparison_image_filter_8h.html  bl_comparison_image_filter_8h_source.html  bl_compose_color_image_8cpp.html  bl_compose_color_image_8h.html  bl_compose_color_image_8h_source.html  bl_convolution_filter_8cpp.html  bl_convolution_filter_8h.html  bl_convolution_filter_8h_source.html  bl_curvature_flow_filter_8cpp.html  bl_curvature_flow_filter_8h.html  bl_curvature_flow_filter_8h_source.html  bl_data_8cpp.html  (+598 more)
BioImageLib/examples/: CMakeLists.txt
BioImageLib/examples/blMpp/: CMakeLists.txt  blMppFactories.cpp  main.cpp
BioImageLib/include/: blAssociationTracking  blCastStacks  blCore  blCsvIO  blFiltering  blGeometry  blMath  blMpp  blParticleFiltering  blRAT  blRand  blStatistics  blTrackingStats  blTxtIO
BioImageLib/python_test/: bilateralFilter.py  blCore.py  blFiltering.py  median.tif  orchide.tif  output.tif  py_th.tif
BioImageLib/src/: CMakeLists.txt  blMainPage.dox
BioImageLib/src/blAssociationTracking/: CMakeLists.txt  blAssociationTracking.dox  blAtConnection.cpp  blAtConnection.h  blAtCostEuclidean.cpp  blAtCostEuclidean.h  blAtCostInterface.cpp  blAtCostInterface.h  blAtCostLine.cpp  blAtCostLine.h  blAtCostLineEuclidean.cpp  blAtCostLineEuclidean.h  blAtCostLineSize.cpp  blAtCostLineSize.h  blAtDetection.cpp  blAtDetection.h  blAtTrack.cpp  blAtTrack.h  blAtTrackSorterInterface.cpp  blAtTrackSorterInterface.h  blAtTrackerGraphDetections.cpp  blAtTrackerGraphDetections.h  blAtTrackerInterface.cpp  blAtTrackerInterface.h  blAtTrackerNull.cpp  blAtTrackerNull.h  readme.txt
BioImageLib/src/blCastStacks/: CMakeLists.txt  blCastImage.cpp  blCastImage.h  blCastImageToFloat.cpp  blCastImageToFloat.h  blCastImageToInt.cpp  blCastImageToInt.h  blCastStacks.dox  blColorImageToGray.cpp  blColorImageToGray.h  blColorImageToLuminance.cpp  blColorImageToLuminance.h  blComposeColorImage.cpp  blComposeColorImage.h  blExtractComponentColorImage.cpp  blExtractComponentColorImage.h  blProjectionImage  blProjectionImage.cpp  blProjectionImage.h  blResizeImage.cpp  blResizeImage.h
BioImageLib/src/blClassification/: CMakeLists.txt  blClassifier.cpp  blClassifier.h  blFuzzyCMeans  blFuzzyCMeans.cpp  blFuzzyCMeans.h  blFuzzyCMeansImpl.cpp  blFuzzyCMeansImpl.h  blThreshold  blThreshold.cpp  blThreshold.h
BioImageLib/src/blComparisonImage/: CMakeLists.txt  blComparisonImage.dox  blComparisonImageFilter.cpp  blComparisonImageFilter.h
BioImageLib/src/blCore/: CMakeLists.txt  blCast.h  blColor.cpp  blColor.h  blCore.i  blData.cpp  blData.h  blException.h  blImage.cpp  blImage.h  blImageCopy.cpp  blImageCopy.h  blImageCreate.cpp  blImageCreate.h  blImageIO.cpp  blImageIO.h  blImageIOInfo.cpp  blImageIOInfo.h  blImageList.cpp  blImageList.h  blImageSize.cpp  blImageSize.h  blImageTypes.h  blMatrix.cpp  blMatrix.h  blMatrix3D.cpp  blMatrix3D.h  blPixel.cpp  blPixel.h  blProcess.cpp  blProcess.h  blProcessObserver.cpp  blProcessObserver.h  blStringOperations.cpp  blStringOperations.h  blTableNumber.cpp  blTableNumber.h  blVectorNumber.cpp  blVectorNumber.h  blVectorNumber2D.cpp  (+6 more)
BioImageLib/src/blFiltering/: CMakeLists.txt  blBilateralFilter.cpp  blBilateralFilter.h  blBinomialBlurFilter.cpp  blBinomialBlurFilter.h  blConvolutionFilter.cpp  blConvolutionFilter.h  blCurvatureFlowFilter.cpp  blCurvatureFlowFilter.h  blDiscreteGaussianFilter.cpp  blDiscreteGaussianFilter.h  blFilter.cpp  blFilter.h  blFiltering.dox  blFiltering.i  blFrangiFilter.cpp  blFrangiFilter.h  blKernelConvolution.cpp  blKernelConvolution.h  blMeanFilter.cpp  blMeanFilter.h  blMedianFilter.cpp  blMedianFilter.h  blMinMaxCurvatureFlowFilter.cpp  blMinMaxCurvatureFlowFilter.h  blRecursiveGaussianFilter.cpp  blRecursiveGaussianFilter.h  blVectorCurvatureAnisotropicDiffusionFilter.cpp  blVectorCurvatureAnisotropicDiffusionFilter.h  blVectorGradientAnisotropicDiffusionFilter.cpp  blVectorGradientAnisotropicDiffusionFilter.h
BioImageLib/src/blGeometry/: CMakeLists.txt  blGeometry.dox  blMathGeometry.cpp  blMathGeometry.h  blMathImage.cpp  blMathImage.h
BioImageLib/src/blMath/: CMakeLists.txt  blDistance.cpp  blDistance.h  blMath  blMath.cpp  blMath.dox  blMath.h  blMathLinearAlgebra  blMathLinearAlgebra.cpp  blMathLinearAlgebra.h  blMathVector  blMathVector.cpp  blMathVector.h  blMathVector.tpp  blMathVectorClustering  blMathVectorClustering.cpp  blMathVectorClustering.h
BioImageLib/src/blMpp/: CMakeLists.txt  blMpp.dox  blMppAlgorithm.cpp  blMppAlgorithm.h  blMppAlgorithmMBCAR.cpp  blMppAlgorithmMBCAR.h  blMppAlgorithmMBCARCluster.cpp  blMppAlgorithmMBCARCluster.h  blMppAlgorithmMBCR  blMppAlgorithmMBCR.cpp  blMppAlgorithmMBCR.h  blMppAlgorithmMBCRParallel  blMppAlgorithmMBCRParallel.cpp  blMppAlgorithmMBCRParallel.h  blMppCluster.cpp  blMppCluster.h  blMppContainerConfigShape2D.cpp  blMppContainerConfigShape2D.h  (+88 more)
BioImageLib/tests/: CMakeLists.txt
BioImageLib/tools/: CMakeLists.txt
(+292 files in other folders)
